[package]
name = "esp-gallery"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
esp32-hal = { package = "esp32-hal", git = "https://github.com/esp-rs/esp-hal.git" }
xtensa-lx-rt = { version = "0.15.0", features = ["esp32"], optional = true }
esp-println = { version = "0.4.0", features = ["esp32"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }

[target.xtensa-esp32s2-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
esp32s2-hal = "0.7.0"
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32s2",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.15.0", features = ["esp32s2"], optional = true }
esp-println = { version = "0.4.0", features = [ "esp32s2" ] }

[target.xtensa-esp32s3-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
esp32s3-hal = "0.7.0"
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.15.0", features = ["esp32s3"], optional = true }
esp-println = { version = "0.4", features = [ "esp32s3" ] }

[target.riscv32imac-unknown-none-elf.dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
riscv-rt = { version = "0.11", optional = true }
esp-println = { version = "0.4", features = [ "esp32c3" ] }


[dependencies]
mipidsi = { git = "https://github.com/almindor/mipidsi" }
display-interface = "0.4"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-hal = "0.2.7"
profont = "0.6.1"   # font with extended signs and options of sizing (unlike fonts in embedded-graphics)
libm = "0.2.5"


[features]
default = [ "rt", "eh1" ]
rt = ["xtensa-lx-rt"] # for esp32 and esp32s2/s3 chips
# rt = [ ] # for esp32c3 chip
eh1 = ["esp32s3-hal/eh1", "esp32s3"]
# eh1 = ["esp32-hal/eh1", "esp32"]
# eh1 = ["esp32s2-hal/eh1", "esp32s2"]
# eh1 = ["esp32c3-hal/eh1", "esp32c3"]

esp32 = []
esp32s2 = []
esp32s3 = []
esp32c3 = []


